# CS202-Crossy-Road

./: CMakeLists.txt  README.md  RULES.md
.github/workflows/: build-test.yaml  build.yaml  cmake-multi-platform.yml  cmake.yaml  issue.yaml
Class-Diagrams/: Animation.drawio  Commands.drawio  Entity.drawio  GUI.drawio  Lane.drawio  Movement.drawio  Obstacle.drawio  ResourceHolder.drawio  SceneNode.drawio  States.drawio
asset/: tmp.txt
asset/s_animals/: Note.txt
asset/s_bombs/beenest - call bees/: beenest_note.txt
asset/s_bombs/octopus - blind/: blind_note.txt
asset/s_bombs/slime - explode/: slime_note.txt
asset/s_skin/Archer/: archer_note.txt
asset/s_skin/Knight/: knight_note.txt
asset/s_skin/Musketeer/: musketeer_note.txt
asset/s_skin/Swordsman/: swordman_note.txt
asset/s_skin/Wizard/: wizard_note.txt
asset/s_traffic/: traffic_note.txt
asset/s_vehicles/beeboss/: beeboss_note.txt
asset/s_vehicles/bombbats/: bombbats_note.txt
asset/s_vehicles/fishmen/: fishmen_note.txt
asset/s_vehicles/orcs/: orc_note.txt
data/: ranking.txt  setting.txt
include/: Animal.hpp  Animation.hpp  AnimationList.hpp  Application.hpp  Button.hpp  Category.hpp  Character.hpp  ChooseModeState.hpp  Command.hpp  CommandQueue.hpp  Component.hpp  Config.hpp  Container.hpp  CreditState.hpp  DataTables.hpp  Dialog.hpp  DialogGeneral.hpp  DialogSkin.hpp  DialogSuccess.hpp  Enemy.hpp  Entity.hpp  Foreach.hpp  GameState.hpp  Label.hpp  Lane.hpp  LevelState.hpp  LoseState.hpp  MenuState.hpp  Motion.hpp  Movement.hpp  MusicPlayer.hpp  ObjectFactory.hpp  Obstacle.hpp  PauseState.hpp  Player.hpp  RankingState.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  ResourceLoad.inl  (+16 more)
src/: Animation.cpp  AnimationList.cpp  Application.cpp  Motion.cpp  Movement.cpp  MusicPlayer.cpp  SoundEffectPlayer.cpp  Utility.cpp  World.cpp  main.cpp
src/Anime/: Animation.cpp  AnimationList.cpp  Motion.cpp  Movement.cpp
src/Command/: Command.cpp  CommandQueue.cpp  Player.cpp
src/DataTables/: DataTables.cpp
src/GUI/: Button.cpp  Component.cpp  Container.cpp  Dialog.cpp  Label.cpp  Textbox.cpp  VolumeBar.cpp
src/GUI/Components/: Button.cpp  Components.cpp  Components.hpp
src/Scene/: SceneNode.cpp  SpriteNode.cpp
src/Scene/Animation/: Animation.cpp
src/Scene/Entity/: Character.cpp  Entity.cpp  Obstacle.cpp
src/Scene/Entity/Animal/: Animal.cpp
src/Scene/Entity/Character/: Character.cpp
src/Scene/Entity/Enemy/: Enemy.cpp
src/Scene/Entity/Obstacle/: Obstacle.cpp
src/Scene/Lane/: Lane.cpp  ObjectFactory.cpp  TrafficLight.cpp
src/Scene/ObjectFactory/: ObjectFactory.cpp
src/Scene/TrafficLight/: TrafficLight.cpp
src/State/: State.cpp  StateStack.cpp
src/State/ChooseModeState/: ChooseModeState.cpp
src/State/CreditState/: CreditState.cpp
src/State/GameState/: GameState.cpp
src/State/LevelState/: LevelState.cpp
src/State/LoseState/: LoseState.cpp
src/State/MenuState/: MenuState.cpp
src/State/PauseState/: PauseState.cpp
src/State/RankingState/: RankingState.cpp
src/State/SavedState/: SavedState.cpp
src/State/SettingState/: DialogGeneral.cpp  DialogSkin.cpp  DialogSuccess.cpp  SettingState.cpp  VolumeBar.cpp
src/State/SettingState/GeneralDialog/: GeneralDialog.hpp
src/State/WinState/: WinState.cpp
test/: App-test.cpp  Resources-test.cpp  States-test.cpp
